# tox-gh-matrix

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: release.yml  test.yml
docs/: index.md  mkdocs.yml
src/tox_gh_matrix/: plugin.py  version_utils.py
tests/: conftest.py
tests/integration/: conftest.py  test_tox_gh_matrix_int.py
tests/unit/: test_set_gh_output.py  test_tox_gh_matrix.py  test_version.py  test_version_utils.py
