[metadata]
name = tox-gh-matrix
version = attr: tox_gh_matrix.version.__version__
description = Generate a GitHub workflow build matrix from tox.ini config
long_description = file: README.md
long_description_content_type = text/markdown
keywords = virtual, environments, isolated, testing, github, workflow
maintainer = Mike Edmunds
maintainer-email = medmunds@gmail.com
author = Mike Edmunds
author-email = medmunds@gmail.com
url = http://tox-gh-matrix.readthedocs.org
project_urls =
    Source=https://github.com/medmunds/tox-gh-matrix
    Tracker=https://github.com/medmunds/tox-gh-matrix/issues
platforms = any
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: tox
    Intended Audience :: Developers
    'License :: OSI Approved :: MIT License',
    Operating System :: OS Independent
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
package_dir =
  =src
zip_safe = True
python_requires = >=3.6
install_requires =
    tox>=3.12.2

[options.packages.find]
where = src

[options.entry_points]
tox =
    tox_gh_matrix=tox_gh_matrix.plugin

[options.extras_require]
testing =
    pytest >= 4.0.0, <6
    pytest-cov >= 2.5.1, <3
    pytest-mock >= 1.10.0, <2
    pytest-xdist >= 1.22.2, <2
docs =
    sphinx >= 2.0.0, < 3
    towncrier >= 18.5.0
    pygments-github-lexers >= 0.0.5
    sphinxcontrib-autoprogram >= 0.1.5

[bdist_wheel]
universal = 1
