[metadata]
name = tox-gh-matrix
version = attr: tox_gh_matrix.version.__version__
description = Generate a GitHub workflow build matrix from the tox.ini envlist
long_description = file: README.md
long_description_content_type = text/markdown
keywords = virtual, environments, isolated, testing, github, workflow
maintainer = Mike Edmunds
maintainer_email = medmunds@gmail.com
author = Mike Edmunds
author_email = medmunds@gmail.com
url = https://github.com/medmunds/tox-gh-matrix
project_urls =
    Source=https://github.com/medmunds/tox-gh-matrix
    Tracker=https://github.com/medmunds/tox-gh-matrix/issues
platforms = any
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: tox
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
package_dir =
    =src
zip_safe = True
python_requires = >=3.6
install_requires =
    tox >= 3.15.2, < 4

[options.packages.find]
where = src

[options.entry_points]
tox =
    tox_gh_matrix=tox_gh_matrix.plugin

[options.extras_require]
testing =
    pytest >= 6.2.0
    pytest-cov >= 3.0.0
    pytest-mock >= 3.6.0
    pytest-xdist >= 2.3.0
docs =

[bdist_wheel]
